zeit.cms changes
================

0.9.17 (unreleased)
-------------------

- Suche stirbt nicht mehr an Umlauten (bug #4195).
- WYSIWYG-Editor: Listen werden jetzt korrekt unterstützt (bug #4223).
- Datums/Zeit-Felder haben jetzt Knöpfe für "in einer Woche" und "in einem
  Monat".
- Neue Defaults für nicht-angezeigte Ordner (bug #4229).

0.9.16 (2008-05-29)
-------------------

- Anlegen von Objekten mit Umlauten oder anderen wirren Zeichen führt nicht
  mehr zum Systemfehler sondern gibt "Einschrankung nicht erfüllt" aus (bug
  #4166).
- Zweite Biga-Referenz im Artikel
- Aus einem Channel können Objekte jetzt gelöscht werden (bug #4179).
- Wird ein falsches Objekt bei den Assets referenziert gibt es jetzt eine
  sinnvolle Fehlermeldung anstatt "Raised if Validaiont fails" (bug #4174).
- Objekte Referenzieren: Wenn der Pfeil -> mit aktivem Shift, Ctrl oder Meta
  gedrückt wird geht ein neues Tab/Fenster auf (bug #4175).
- Auf der Biga gibt es jetzt einen Link zum Bild (bug #4180).
- Der HTML-Titel im CMS beinhaltet jetzt den Titel des Objekts (bug #4152). 
- ObjectBrowser zeigt jetzt den aktuellen Pfad an (bug #4058).
- ObjectBrowser gibt eine Meldung aus, wenn im Ordner nichts auswählbares
  vorhanden ist.

0.9.15 (2008-05-26)
-------------------

- Channels werden beim Syndizieren gesperrt.
- zeit.relation ist jetzt zeit.cms.relation.
- Teilweise wurde ein <head><relateds> implizit ereugt, bug #4183.
- Jedes Objekt weiß jetzt wohin es Syndiziert wurde (via zeit.cms.relation, bug
  #4178).
- Beim zurückziehen im Workflow wird ein Objekt aus den Channeln in denen es
  enthalten ist entfernt (bug #4177).
- Bildergalerie speichert ihre DAV-Properties jetzt auch im XML.
- Zurückziehen von Objekten muss nochmals bestätigt werden, incl. Warnung über
  die Konsequenzen.
- Nachrichten werden nur noch im Fehlerfall 5s angezeigt, sonst 0.5.
- Metadaten eines Bildes beim Referenzieren korrekt eingebunden (bug #4189).